Fix scaling issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -240,9 +240,11 @@ button:focus {
 }
 
 .logo {
-  height: 1.8em !important;
-  width: 1.8em !important;
+  height: 1.6em !important;
+  width: 1.6em !important;
 }
+
+@media (max-width: 400px) { .logo { display: none; } }
 
 .navbar-nav .nav-link {
   color: var(--white) !important;
